--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,15 @@
 * {
     scroll-behavior: auto;
 }
+
+:root {
+    --tw-bg-opacity: 1;
+    --primary: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+    --secondary: white;
+    --background: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+    --foreground: rgb(24, 24, 27);
+    --foreground-text: rgb(250, 250, 250);
+    --accent: #d6d7db;
+    --input: #e5e7eb;
+    --input-hover: #9e9e9f;
+}
