added cursor-pointer to file input

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,10 @@
     --input-hover: #9e9e9f;
 }
 
+::-webkit-file-upload-button {
+    cursor:pointer;
+}
+
 .page-main-content {
     scrollbar-gutter: stable both-edges;
 }
